@startuml Diagrama De CLASES

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

' ======================
' CLASES DEL MODELO
' ======================

class java.Tablero
class Hexagono{
    -numero: int
    -tieneLadron: boolean
}
class java.Dados{
    -random: Random
}
class Vertice
class Arista
class java.Terreno
class java.Ladron

java.Tablero --> Hexagono
java.Tablero --> Vertice

Hexagono --> Vertice
Hexagono --> java.Terreno

java.Ladron --> Hexagono

Vertice <--> Arista

java.Terreno <|-- Desierto
java.Terreno <|-- Colina
java.Terreno <|-- Montaña
java.Terreno <|-- Pastizal
java.Terreno <|-- Campo
java.Terreno <|-- Bosque

Vertice --> Estructura
Arista --> Camino

Construible <|-- Estructura
Construible <|-- Camino

Estructura <|-- Poblado
Estructura <|-- Ciudad
@enduml